fixed overlay not completely moving out of the viewport

--- a/html/style/default.css
+++ b/html/style/default.css
@@ -245,7 +245,7 @@ a.hebi:hover>img{
 #overlay{
 	position:fixed;
 	top:2em;
-	left:50%;
+	left:50vw;
 	display:flex;
 	flex-direction:column;
 	transform:translateX(-50%) skew(var(--skewr));
